Made post class
Post class will  be divided to answer and question class.

--- a/app/templates/ask.html
+++ b/app/templates/ask.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <form method="POST">
-
+    <p>Type=<input name="type" type="text"></input></p>
+    <p>Name=<input name="name" type="text"></input></p>
+    <p>Text=<input name="text" type="text"></input></p>
+    <input type="submit">
 </form>
 </body>
 </html>
