--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,5 +5,8 @@
 {{user.id}}
 {{user.username}}
 {{user.registered_on}}
+{% for x in user.questions %}
+<p><h1>{{x.name}}</h1><p>{{x.text}}</p></p>
+{% endfor %}
 </body>
 </html>
