Before front-end commit #0
just bugfix.

--- a/app/templates/ask.html
+++ b/app/templates/ask.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form method="POST">
-    <p>Type=<input name="type" type="text"></input></p>
+    <p>Tags=<input name="tags" type="text"></input></p>
     <p>Name=<input name="name" type="text"></input></p>
     <p>Text=<input name="text" type="text"></input></p>
     <input type="submit">
